Added a new CLI util for user management.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -55,7 +55,7 @@ http.port=9300
 # application.defaultCookieDomain to '.example.com', the cookies
 # will be valid for all domains ending with '.example.com', ie:
 # foo.example.com and bar.example.com
-# application.defaultCookieDomain=.example.com
+application.defaultCookieDomain=.hnnotify.com
 
 # JVM configuration
 # ~~~~~
@@ -63,14 +63,15 @@ http.port=9300
 # jpda.port=8000
 #
 # Java source level => 1.5, 1.6 or 1.7 (experimental)
-# java.source=1.5
+java.source=1.6
 
 # Log level
 # ~~~~~
 # Specify log level for your application.
 # If you want a very customized log, create a log4j.properties file in the conf directory
-#application.log=WARN
 application.log=INFO
+#%prod.application.log=WARN
+
 #
 # More logging configuration
 # application.log.path=/log4j.properties
