--- a/conf/application.conf
+++ b/conf/application.conf
@@ -185,7 +185,7 @@ attachments.path=data/attachments
 
 mail.smtp.host=smtp.gmail.com
 mail.smtp.user=hnnotify@thebuzzmedia.com
-mail.smtp.pass=bg%j87a#sd
+mail.smtp.pass=
 mail.smtp.channel=ssl
 
 # Url-resolving in Jobs
